src/main.scss
@import "~bootstrap/scss/bootstrap";
$dark-green: #003333;
$dark-gray: #333333;
$light-gray: #cccccc;
$gray: #999999;
$brown: #996633;
$light-brown: #cc9966;
$sakura-pink: #ffcccc;
$dropdown-border: 1px solid $light-gray;

@include media-breakpoint-up(lg) {
  .dropdown-border {
    border-left: $dropdown-border;
    border-right: $dropdown-border;
    border-bottom: $dropdown-border;
  }
}
@include media-breakpoint-down(md) {
  .dropdown-border {
    border-right: $dropdown-border;
    border-bottom: $dropdown-border;
  }
}

%dropdown {
  border-bottom: $dropdown-border;
}

%box {
  cursor: pointer;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  text-align: center;
}

%rounded-number {
  border: 2px solid;
  display: inline-block;
  height: 36px;
  line-height: 36px;
  text-align: center;
  width: 36px;
}

.dropdown {
  @extend %dropdown;
}

.header {
  background-color: $dark-green;
  color: white;

  .number {
    @extend %rounded-number;
  }
}

.calendar {
  font-weight: bold;
  text-align: center;

  .number {
    @extend %rounded-number;
    border-color: $light-brown;
    color: $light-brown;

    &.today {
      background-color: $light-brown;
      color: white;
    }

    &.disabled {
      background-color: $light-gray;
      border: none;
      color: $gray;
    }

    &.selected {
      border: none;
      background-color: $sakura-pink;
      color: $gray;
    }
  }

  .weekday {
    color: $gray;
    padding-bottom: 0.5rem;
  }
}

.schedule-head {
  color: $gray;
}

.schedule {
  .timebox {
    @extend %box;
    background-color: $light-brown;
    color: white;

    &.active {
      background-color: $brown;
    }

    &.inactive {
      background-color: $light-gray;
    }
  }

  .notify-box {
    @extend %box;
    color: $dark-gray;
    font-size: 1.2rem;
    line-height: 46px;
  }
}

